# api

./: .env.example  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
scripts/: entrypoint.sh
src/azuraforge_api/: database.py  main.py  schemas.py
src/azuraforge_api/api/core/: config.py
src/azuraforge_api/core/: config.py  exceptions.py  password.py  security.py
src/azuraforge_api/routes/: auth.py  experiments.py  pipelines.py  streaming.py
src/azuraforge_api/services/: experiment_service.py  user_service.py
tests/azuraforge_api/: test_api_endpoints.py
