# api/pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azuraforge-api"
version = "0.2.5"
description = "The API server for the AzuraForge Platform."
requires-python = ">=3.8"

dependencies = [
    "azuraforge-learner @ git+https://github.com/AzuraForge/learner.git@v0.1.5",
    "azuraforge-worker @ git+https://github.com/AzuraForge/worker.git@v0.2.4",
    "azuraforge-applications @ git+https://github.com/AzuraForge/applications.git@v0.1.0",
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-dotenv",
    "pyyaml",
    "redis",
    "SQLAlchemy",
    "psycopg2-binary",
    "python-semantic-release"
]

[project.scripts]
start-api = "azuraforge_api.main:run_server"

[project.urls]
"Homepage" = "https://github.com/AzuraForge/api"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.semantic_release]
branch = "main"
version_variable = "pyproject.toml:project.version"
upload_to_pypi = false
major_on_zero = false
changelog_file = "CHANGELOG.md"